cleans up data frame code for lessons 3 to 5

--- a/class_notes/class3/raster_analysis.Rmd
+++ b/class_notes/class3/raster_analysis.Rmd
@@ -558,7 +558,7 @@ nyc_2019_boroughs_population<-cbind(nyc_boroughs_4326, nyc_boroughs_population_z
 View(nyc_2019_boroughs_population)
 ```
 
-```{r}
+```{r, echo=F}
 nyc_2019_boroughs_population %>% datatable(extensions=c("Scroller", "FixedColumns"), options = list(
   deferRender = TRUE,
   scrollY = 350,
